force-app/main/default/objects/SterlingQuoteItem__c/SterlingQuoteItem__c.object-meta.xml
<CustomObject>
    <label>SterlingQuoteItem</label>
    <nameField>
        <label>SterlingQuoteItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SterlingQuoteItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>