force-app/main/default/objects/SterlingQuoteItem__c/fields/AddressDescription__c.field-meta.xml
<CustomField>
    <fullName>AddressDescription__c</fullName>
    <label>AddressDescription</label>
    <length>40</length>
    <type>Text</type>
</CustomField>