force-app/main/default/objects/SterlingQuoteItem__c/fields/BuildingSubNumber__c.field-meta.xml
<CustomField>
    <fullName>BuildingSubNumber__c</fullName>
    <label>BuildingSubNumber</label>
    <length>5</length>
    <type>Text</type>
</CustomField>