force-app/main/default/objects/SterlingQuoteItem__c/fields/CPQLineNumber__c.field-meta.xml
<CustomField>
    <fullName>CPQLineNumber__c</fullName>
    <label>CPQLineNumber</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>