force-app/main/default/objects/SterlingQuoteItem__c/fields/DataRegion__c.field-meta.xml
<CustomField>
    <fullName>DataRegion__c</fullName>
    <label>DataRegion</label>
    <length>5</length>
    <type>Text</type>
</CustomField>