force-app/main/default/objects/SterlingQuoteItem__c/fields/Discount_DiscountAmountDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>Discount_DiscountAmountDiscountAmount__c</fullName>
    <label>Discount_DiscountAmount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>