force-app/main/default/objects/SterlingQuoteItem__c/fields/DiscountType__c.field-meta.xml
<CustomField>
    <fullName>DiscountType__c</fullName>
    <label>DiscountType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>SVP</fullName>
            </value>
            <value>
                <fullName>RSM</fullName>
            </value>
            <value>
                <fullName>ICB</fullName>
            </value>
            <value>
                <fullName>INA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>