force-app/main/default/objects/SterlingQuoteItem__c/fields/GFItem__c.field-meta.xml
<CustomField>
    <fullName>GFItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GFItem</label>
    <type>Checkbox</type>
</CustomField>