force-app/main/default/objects/SterlingQuoteItem__c/fields/ICBTerritories_c__c.field-meta.xml
<CustomField>
    <fullName>ICBTerritories_c__c</fullName>
    <label>ICBTerritories__c</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alabama</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>Newyork</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>