force-app/main/default/objects/SterlingQuoteItem__c/fields/IsAddressQualified__c.field-meta.xml
<CustomField>
    <fullName>IsAddressQualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAddressQualified</label>
    <type>Checkbox</type>
</CustomField>