force-app/main/default/objects/SterlingQuoteItem__c/fields/IsContracted__c.field-meta.xml
<CustomField>
    <fullName>IsContracted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsContracted</label>
    <type>Checkbox</type>
</CustomField>