force-app/main/default/objects/SterlingQuoteItem__c/fields/IsNewConstruction__c.field-meta.xml
<CustomField>
    <fullName>IsNewConstruction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNewConstruction</label>
    <type>Checkbox</type>
</CustomField>