force-app/main/default/objects/SterlingQuoteItem__c/fields/IsTerm__c.field-meta.xml
<CustomField>
    <fullName>IsTerm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTerm</label>
    <type>Checkbox</type>
</CustomField>