force-app/main/default/objects/SterlingQuoteItem__c/fields/IsZAddressRequired__c.field-meta.xml
<CustomField>
    <fullName>IsZAddressRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsZAddressRequired</label>
    <type>Checkbox</type>
</CustomField>