force-app/main/default/objects/SterlingQuoteItem__c/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <label>Line Number</label>
    <type>AutoNumber</type>
</CustomField>