force-app/main/default/objects/SterlingQuoteItem__c/fields/MetroEQualificationType__c.field-meta.xml
<CustomField>
    <fullName>MetroEQualificationType__c</fullName>
    <label>MetroEQualificationType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Match</fullName>
            </value>
            <value>
                <fullName>Terminal Match</fullName>
            </value>
            <value>
                <fullName>Exchange Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>