force-app/main/default/objects/SterlingQuoteItem__c/fields/NetworkDistance__c.field-meta.xml
<CustomField>
    <fullName>NetworkDistance__c</fullName>
    <label>NetworkDistance</label>
    <length>64</length>
    <type>Text</type>
</CustomField>