force-app/main/default/objects/SterlingQuoteItem__c/fields/NumInstallments__c.field-meta.xml
<CustomField>
    <fullName>NumInstallments__c</fullName>
    <label>NumInstallments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>