force-app/main/default/objects/SterlingQuoteItem__c/fields/NXX__c.field-meta.xml
<CustomField>
    <fullName>NXX__c</fullName>
    <label>NXX</label>
    <length>8</length>
    <type>Text</type>
</CustomField>