force-app/main/default/objects/SterlingQuoteItem__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SterlingQuoteItems</relationshipLabel>
    <relationshipName>SterlingQuoteItems</relationshipName>
    <type>Lookup</type>
</CustomField>