force-app/main/default/objects/SterlingQuoteItem__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <label>Product Code</label>
    <type>TextArea</type>
</CustomField>