force-app/main/default/objects/SterlingQuoteItem__c/fields/ProductInterval__c.field-meta.xml
<CustomField>
    <fullName>ProductInterval__c</fullName>
    <label>ProductInterval</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>