force-app/main/default/objects/SterlingQuoteItem__c/fields/PromoDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>PromoDiscountAmount__c</fullName>
    <label>PromoDiscountAmount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>