force-app/main/default/objects/SterlingQuoteItem__c/fields/PromoExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>PromoExpirationDate__c</fullName>
    <label>PromoExpirationDate</label>
    <type>Date</type>
</CustomField>