force-app/main/default/objects/SterlingQuoteItem__c/fields/PromoName__c.field-meta.xml
<CustomField>
    <fullName>PromoName__c</fullName>
    <label>PromoName</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>