force-app/main/default/objects/SterlingQuoteItem__c/fields/PromotionId__c.field-meta.xml
<CustomField>
    <fullName>PromotionId__c</fullName>
    <label>PromotionId</label>
    <length>120</length>
    <type>Text</type>
</CustomField>