force-app/main/default/objects/SterlingQuoteItem__c/fields/PSKU__c.field-meta.xml
<CustomField>
    <fullName>PSKU__c</fullName>
    <label>PSKU</label>
    <length>120</length>
    <type>Text</type>
</CustomField>