force-app/main/default/objects/SterlingQuoteItem__c/fields/RequestedDueDate__c.field-meta.xml
<CustomField>
    <fullName>RequestedDueDate__c</fullName>
    <label>RequestedDueDate</label>
    <type>Date</type>
</CustomField>