force-app/main/default/objects/SterlingQuoteItem__c/fields/ScheduleId__c.field-meta.xml
<CustomField>
    <fullName>ScheduleId__c</fullName>
    <label>ScheduleId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>