force-app/main/default/objects/SterlingQuoteItem__c/fields/StandardMRC__c.field-meta.xml
<CustomField>
    <fullName>StandardMRC__c</fullName>
    <label>StandardMRC</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>