force-app/main/default/objects/SterlingQuoteItem__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Presented</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>ICB Pending Approval</fullName>
            </value>
            <value>
                <fullName>ICB Approved</fullName>
            </value>
            <value>
                <fullName>Management Pending Approval</fullName>
            </value>
            <value>
                <fullName>Management Approved</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>INA Pending</fullName>
            </value>
            <value>
                <fullName>INA Accepted</fullName>
            </value>
            <value>
                <fullName>INA Rejected</fullName>
            </value>
            <value>
                <fullName>Internal Eng. Pending</fullName>
            </value>
            <value>
                <fullName>Internal Eng. Accepted</fullName>
            </value>
            <value>
                <fullName>Internal Eng. Rejected</fullName>
            </value>
            <value>
                <fullName>SE Pending</fullName>
            </value>
            <value>
                <fullName>SE Rejected</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>