force-app/main/default/objects/SterlingQuoteItem__c/fields/SterlingQuote__c.field-meta.xml
<CustomField>
    <fullName>SterlingQuote__c</fullName>
    <label>SterlingQuote</label>
    <referenceTo>SterlingQuote__c</referenceTo>
    <relationshipLabel>SterlingQuoteItems</relationshipLabel>
    <relationshipName>SterlingQuoteItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>