force-app/main/default/objects/SterlingQuoteItem__c/fields/StreetName__c.field-meta.xml
<CustomField>
    <fullName>StreetName__c</fullName>
    <label>StreetName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>