force-app/main/default/objects/SterlingQuoteItem__c/fields/StreetSubDescription__c.field-meta.xml
<CustomField>
    <fullName>StreetSubDescription__c</fullName>
    <label>StreetSubDescription</label>
    <length>20</length>
    <type>Text</type>
</CustomField>