force-app/main/default/objects/SterlingQuoteItem__c/fields/TermEndDate__c.field-meta.xml
<CustomField>
    <fullName>TermEndDate__c</fullName>
    <label>TermEndDate</label>
    <type>Date</type>
</CustomField>