force-app/main/default/objects/SterlingQuoteItem__c/fields/TermEndDateMismatch__c.field-meta.xml
<CustomField>
    <fullName>TermEndDateMismatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TermEndDateMismatch</label>
    <type>Checkbox</type>
</CustomField>