force-app/main/default/objects/SterlingQuoteItem__c/fields/unit_Designator__c.field-meta.xml
<CustomField>
    <fullName>unit_Designator__c</fullName>
    <label>unit Designator</label>
    <length>10</length>
    <type>Text</type>
</CustomField>