force-app/main/default/objects/SterlingQuoteItem__c/fields/unit_number__c.field-meta.xml
<CustomField>
    <fullName>unit_number__c</fullName>
    <label>unit number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>