force-app/main/default/objects/SterlingQuoteItem__c/fields/WireCenter__c.field-meta.xml
<CustomField>
    <fullName>WireCenter__c</fullName>
    <label>WireCenter</label>
    <length>10</length>
    <type>Text</type>
</CustomField>